# Push_swap

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old_backup  error_handler.c  example.h  input_validation.c  linked_list_utils.c  main.c  old_main_with_all_prints.c  push_command.c  push_swap  push_swap.h  radix_sort.c  reverse_rotate_command.c  rotate_command.c  sort_up_to_five.c  sort_utils.c  stack_init.c  swap_command.c  test_utils.c  utils.c  working_main.c
lib/ft_printf/: Makefile  ft_printf.c  ft_printf.h
lib/ft_printf/libft/: ft_lstnew.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strlcat.c  ft_strrchr.c  ft_substr.c  libft.h
lib/libft/: Makefile  ft_strncmp.c
libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  manual.txt
test/: index_stack_with_prints.c  manual.txt  test.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test17_backup.c  test18.c  test19.c  test2.c  test20.c  test21.c  test3.c  test4.c  test5.c  test6.c  test7.c  test7_new.c  test8.c  test8_new.c  test9.c
